# todo-backend

./: .gitignore  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_tasklist_description.py  0003_auto_20201128_2002.py  0004_auto_20201128_2003.py  0005_auto_20201128_2003.py  0006_auto_20201129_1511.py
todoapp/: settings.py  urls.py
todoapp/templates/: swagger-ui.html
